# labs

./: LICENSE
arm/: .gitignore  LICENSE
arm/arduino/: README.md
arm/docs/: resistores.md
arm/raspberry-pi/: REDME.md
arm/raspberry-pi/apps/hello/: CMakeLists.txt  Makefile  build.sh
arm/raspberry-pi/apps/hello/include/: mycalc.h
arm/raspberry-pi/apps/hello/src/: main.c  mycalc.c
arm/st/blinkled-stm32f4/: .cproject  .project
arm/st/blinkledc/: .cproject  .project
cpp/: .gitignore  README.md
cpp/docs/certification/: cppc1.md
cpp/libs/c_hard_way/: ex1  ex2.1.mak  ex3
cpp/libs/cbook/: add.c  add.h  calc.c  fahrenheit_celsius.c  file.txt  filrcopy.c  grepline.c  heitor.c  hello.c  pointers.c  power.c  strlen.c  wordcount.c
cpp/libs/certification/: CMakeLists.txt  build.sh
cpp/libs/certification/src/: c1_array.cpp  c1_vector.cpp  cap1.cpp
cpp/libs/cppcourse/: README.md
cpp/libs/fundaments/: README.md
cpp/libs/gdb-concepts/: hello.c
cpp/libs/gradle-cpp/: build.gradle
cpp/libs/hackerrank/: conditional.cpp  hourglass.cpp  mapexample.cpp
cpp/libs/hackerrank/procpp/: CMakeLists.txt  arrays_chars.cpp  arrays_intro.cpp  basic_types.cpp  conditional.cpp  countones.cpp  forloop.cpp  inout.cpp  map_intro.cpp  pointer.cpp  procpp.cpp  procpp.h  recursive-factorial.cpp
cpp/libs/hello-web-assembly/: hello.wasm
cpp/libs/histocv/: README.md  build.gradle  settings.gradle
cpp/libs/histocv/histocv-lib-cpp/histocv/: CMakeLists.txt  HistoOpenCv.cpp  HistoOpenCv.h  histocv.cpp  histocv.h
cpp/libs/introcpp/: cast  cast.cpp  complextypes.cpp  const  const.cpp  flow.cpp  hello  pr_complextype.cpp  pr_datatypes  pr_datatypes.cpp
cpp/libs/pocdefinitions/: .cproject  .project
frontend/: README.md
frontend/canvas/: retangulos.html
frontend/masterminds/: mmcanvas.html
frontend/masterminds/js/: mmcanvas.js
frontend/pixelart/: index.html
frontend/raster/: index.html  paper.html
java/: .gitignore  .gitmodules  LICENSE
java/docs/cert/: README.md
java/pocs/demoamazon/: pom.xml
java/pocs/javaee7/: README.md
java/pocs/javafx/: hello-groovyfx.groovy
java/pocs/manipulatexml/: build.gradle
java/pocs/pluralsight-java-concurrency/: build.gradle
java/pocs/spring/: .gitignore
java/pocs/tutorjava8/: build.gradle
labview/: README.md
labview/app/SwitchVI/: SwitchVI.lvproj
labview/conceitos/: area_triangulo.vi  digrama_blocos.vi  estruturas_controle.vi  estruturas_dados.vi  estruturas_dados_array.vi  estruturas_dados_cluster.vi  exercicio1.vi  fluxo_dados.vi  paineis.vi  simulando_tempratura.vi  tipos.vi
labview/slides/: curso_LabVIEW_1_introducao.odp  curso_LabVIEW_1_programacao.odp  curso_LabVIEW_2_programacao.odp  links.md
nodejs/: .gitignore  LICENSE  README.md  effective-js.md  router_server.js  simple_md_pdf.js
nodejs/async_seq/: README.md  scope_behavior_correct.js  scope_behavior_lost.js
nodejs/async_seq/flow_control/: package.json
nodejs/async_tech/: blog_recent.js  chat_server.js  echo_server_tcp.js  server_emitter.js  titles.json
nodejs/blank/simple-web-app/: package.json  server.js
nodejs/chatrooms/: Readme.md  package.json  server.js
nodejs/chatrooms/lib/: chat_server.js
nodejs/chatrooms/public/: index.html
nodejs/child_processes/: exec_poc.js  fork_parent.js  spawn_back.js  spawn_env.js  spawn_pipe.js  spawn_poc.js
nodejs/concept/: mixins.js  objects-es5.js  promise.js
nodejs/connect/: README.md  authentic.js  helloconnect.js  minimalserver.js
nodejs/connect/lib/: logger.js
nodejs/crawlers/: package.json
nodejs/crawlers/lib/: sargsus.js  saudelegis.js
nodejs/currency_app/: test-currency.js
nodejs/electron/electron-addon-cpp/: README.md  package.json  renderer.js
nodejs/express/: hello.js  package.json
nodejs/express/photo/: package.json
nodejs/hello/: app.js  helloserver.js  mod1.js  mod2.js  site_server.js  url_server.js
nodejs/hello/site/: artigos.html  contatos.html  erro.html
nodejs/nodeweb/: forms.js  forms_upload.js  https.js  httpserver_basic.js  httpserver_parses.js  key-cert.pem  key.pem  restfull.js  staticfile.js
nodejs/reactjs/basic/: README.md  contacts.json  package.json  webpack.config.js
nodejs/reactjs/hello/: hello.jsx  index.html  package.json  readme.md  webpack.config.js  world.jsx
nodejs/reactjs/kanban/: index.html  package.json  style.css  webpack.config.js
nodejs/scaling/: cluster.js  server.js
tcchbase/: .gitignore  README.md  envdev.sh
tcchbase/apps/hbcs-comparison/: .project  README.md  build.gradle  eclipse-java-google-style.xml  intellij-java-google-style.xml  settings.gradle
tcchbase/build-tools/: cassandra-install-standalone.sh  hbase-install-standalone.sh
tcchbase/doc/: cassandra.md  cluster.md  dataset.md  hbase.md  tcc.md
tcchbase/doc/hardware/: df.txt  hwinfo.txt  lscpu.txt  lshw.txt  lspci.txt  netstat.txt  netstat_lp.txt
tcchbase/doc/info/: cassandra_report.txt  hadoop_report.txt  hbase_report.txt
tcchbase/sysapps/: cassandra-cluster-install.sh  cassandra-install-standalone.sh  hadoop-cluster-install.sh  hadoop-single-install.sh  hbase-cluster-install.sh  hbase-install-standalone.sh  install-all-local.sh
tcchbase/temp/poc-datamodel/: README.md
tcchbase/tools/: README.md  cassandra-cluster-start.sh  cassandra-cluster-stop.sh  hadoop-cluster-start.sh  hadoop-cluster-stop.sh  hadoop-single-start.sh  hadoop-single-stop.sh  hbase-cluster-start.sh  hbase-cluster-stop.sh  hbcs-cluster-cassandra.sh  hbcs-cluster-hadoop.sh  hbcs-cluster-hbase-scripts-upload.sh  hbcs-cluster-hbase.sh  hbcs-cluster-java.sh  hbcs-cluster-ssh.sh  hbcs-cluster-util.sh  hbcs-dataset-extract.sh  hbcs-tests-cassandra-local-normal.sh  hbcs-tests-cassandra-local-query.sh  hbcs-tests-hbase-cluster-normal.sh  hbcs-tests-hbase-local-normal.sh  hbcs-tests-hbase-local-query.sh
tcchbase/var/hbcs-dataset/: stackexchange_archive.torrent
test-tools/: README.md  howto_robot_java_swing.txt
test-tools/demo-app/: build.gradle
test-tools/demo-app-test-robot/: example.txt  run_demo.py
test-tools/demo-app-test-robot/results/: log.html  output.xml  report.html
(+510 files in other folders)
